MMC-206 only upload non-empty chunks